--- a/web/temp.html
+++ b/web/temp.html
@@ -3,19 +3,23 @@
 	<title>
 		Temporary page
 	</title>
-
+	<link rel="stylesheet" type="text/css" href="temp.css">
 </head>
 <body>
+	<div id="magview">
+		<div id="viewName">Eclipse Foundation</div>
+		<div class="caption">Tags</div>
+		<div id="viewTags">eclipse,java,ide,recommenders,ecf,communication,development,rcp,orion,javascript,c/c++</div>
+	</div>
 	<h1> Experiments </h1>
-	<center>
-		<input type="text" placeholder="Enter Name of the Org" size="100" id="name" onkeyup="checkName()"><br />
-		<input type="text" placeholder="Enter Years separated by commas" size="100" id="years" onkeyup="checkYears()"><br />
-		<input type="text" placeholder="Enter Count" size="100" id="count" onkeyup="checkCount()"><br />
-		<input type="text" placeholder="Enter Tags separated by commas" size="100" id="tags" onkeyup="checkTags()"><br />
-	</center>
+	<input type="text" placeholder="Enter Name of the Org" size="100" id="name" onkeyup="checkName()"><br />
+	<input type="text" placeholder="Enter Years separated by commas" size="100" id="years" onkeyup="checkYears()"><br />
+	<input type="text" placeholder="Enter Count" size="100" id="count" onkeyup="checkCount()"><br />
+	<input type="text" placeholder="Enter Tags separated by commas" size="100" id="tags" onkeyup="checkTags()"><br />
+
 	<div id="results"></div>
 
-	<script type="text/javascript" src="temp.js"></script>
 	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="temp.js"></script>
 </body>
 </html>
